cloud-infra-macros/tests/fails/zipfile_not_found.rs
use cloud_infra_macros::zip_file;

fn example() {
    let file = zip_file!("nonexistent.zip");
}

fn main() {}