cloud-infra-macros/tests/fails/zipfile_not_found.stderr
error: did not find file `nonexistent.zip`
 --> tests/fails/zipfile_not_found.rs:4:26
  |
4 |     let file = zip_file!("nonexistent.zip");
  |                          ^^^^^^^^^^^^^^^^^
